charts/tagbio-platform-chart/1.0.55/templates/firewall-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tagbio-firewall-network-policy
  namespace: tagbio-app
spec:
  podSelector:
    matchLabels:
      firewall.tag.bio/role: protected
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              firewall.tag.bio/role: gateway
          namespaceSelector:
            matchLabels:
              firewall.tag.bio/role: gateway
